kubernetes/flaskr-staging-gcp.deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flaskr-staging

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskr-staging-deployment-${IMAGE_TAG}
  namespace: flaskr-staging
  labels:
    app: flaskr-staging-app-${IMAGE_TAG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskr-staging-app-${IMAGE_TAG}
  template:
    metadata:
      labels:
        app: flaskr-staging-app-${IMAGE_TAG}
    spec:
      securityContext:
        fsGroup: 1024
      containers:
        - name: flaskr-staging
          image: ${IMAGE_NAME}
          ports:
          - containerPort: 8080
          volumeMounts:
            - mountPath: /home/app/db
              name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: flaskr-staging-persistent-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: flaskr-staging-app-${IMAGE_TAG}
  name: flaskr-staging-load-balancer-${IMAGE_TAG}
  namespace: flaskr-staging
spec:
  selector:
    app: flaskr-staging-app-${IMAGE_TAG}
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 8080
  type: LoadBalancer

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: flaskr-staging-app-${IMAGE_TAG}
  name: flaskr-staging-virtual-host-${IMAGE_TAG}
  namespace: flaskr-staging
spec:
  rules:
  - host: staging.${APPS_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: flaskr-staging-load-balancer-${IMAGE_TAG}
          servicePort: 9090
